tests/compile_fail/thread_local/runtime_thread_local 2.stderr
error[E0277]: the trait bound `Foo: PoolMut<GlobalId>` is not satisfied
   --> $DIR/runtime_thread_local 2.rs:10:40
    |
10  |       assert_send_sync(Global::with_pool(Foo))
    |                                          ^^^ the trait `PoolMut<GlobalId>` is not implemented for `Foo`
    |
   ::: $WORKSPACE/src/runtime.rs
    |
    | /         make_global! {
102 | |             (
103 | |                 /// A gobal allocator for runtime ids (not to be confused with a memory allocator)
104 | |                 ///
...   |
113 | |             )
114 | |         }
    | |_________- required by this bound in `pui::runtime::Global::with_pool`
    |
    = help: the following implementations were found:
              <Foo as PoolMut<pui::runtime::Global>>

error[E0277]: the trait bound `Foo: PoolMut<GlobalId>` is not satisfied
   --> $DIR/runtime_thread_local 2.rs:10:22
    |
10  |     assert_send_sync(Global::with_pool(Foo))
    |                      ^^^^^^^^^^^^^^^^^^^^^^ the trait `PoolMut<GlobalId>` is not implemented for `Foo`
    |
   ::: $WORKSPACE/src/runtime.rs
    |
    |         pub struct Runtime<I: IdAlloc = Global, P: PoolMut<I::Id> = ()> {
    |                                                    -------------- required by this bound in `Runtime`
    |
    = help: the following implementations were found:
              <Foo as PoolMut<pui::runtime::Global>>

error[E0277]: `*mut ()` cannot be sent between threads safely
  --> $DIR/runtime_thread_local 2.rs:10:5
   |
8  |     fn assert_send_sync<T: Send + Sync>(_: T) {}
   |                            ---- required by this bound in `assert_send_sync`
9  |     assert_send_sync(Global::new());
10 |     assert_send_sync(Global::with_pool(Foo))
   |     ^^^^^^^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
   |
   = help: within `Runtime<pui::runtime::Global, Foo>`, the trait `Send` is not implemented for `*mut ()`
   = note: required because it appears within the type `ThreadLocal`
   = note: required because it appears within the type `PhantomData<ThreadLocal>`
   = note: required because it appears within the type `Foo`
   = note: required because it appears within the type `Runtime<pui::runtime::Global, Foo>`

error[E0277]: `*mut ()` cannot be shared between threads safely
  --> $DIR/runtime_thread_local 2.rs:10:5
   |
8  |     fn assert_send_sync<T: Send + Sync>(_: T) {}
   |                                   ---- required by this bound in `assert_send_sync`
9  |     assert_send_sync(Global::new());
10 |     assert_send_sync(Global::with_pool(Foo))
   |     ^^^^^^^^^^^^^^^^ `*mut ()` cannot be shared between threads safely
   |
   = help: within `Runtime<pui::runtime::Global, Foo>`, the trait `Sync` is not implemented for `*mut ()`
   = note: required because it appears within the type `ThreadLocal`
   = note: required because it appears within the type `PhantomData<ThreadLocal>`
   = note: required because it appears within the type `Foo`
   = note: required because it appears within the type `Runtime<pui::runtime::Global, Foo>`
